# todo_app_plus_mcp

./: .gitignore  .windsurfrules  LICENSE.txt  README.md  TODOS.md  pyproject.toml  sample.env  start_app.sh  todo_data.json  todo_data.sample.json
docs/: client_example.md  mcp_documentation.md
todo_api/: db.py  json_db.py  main.py  models.py
todo_chat/: chat_cli.py
todo_mcp/: client_example.py  server.py
todo_ui/: app.py
todo_ui/static/css/: styles.css
todo_ui/static/js/: main.js
todo_ui/templates/: base.html  edit.html  index.html  new.html  view.html
